workaround for Java 16 module path