@@ -3,6 +3,7 @@
 set -e
 
 java \
+--illegal-access=permit \
 -Djorgan.skins.path=jorgan-skins \
 -Djorgan.creative.library.path=jorgan-creative/target/native \
 -Djorgan.fluidsynth.library.path=jorgan-fluidsynth/target/native \
